Updated README and CHANGELOG

--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -1,5 +1,11 @@
 ## Release Notes: ##
 
+### 5.3 ###
+
+  * Improved the check download function.
+  * Improved syntax.
+  * Minor fixes.
+
 ### 5.2 ###
 
   * Upgraded NginX development to 1.1.18.
