Improved restart function

--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -3,7 +3,8 @@
 ### 5.3 ###
 
   * Improved the check download function.
-  * Improved discovery of old configure options.
+  * Improved discovery of old configure options for nginx.
+  * Improved restart functions.
   * Improved syntax.
   * Minor fixes.
 
