--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -1,11 +1,10 @@
 ## Release Notes: ##
 
-### 5.6.0 ###
+### 6.0.0 ###
 
-  * Support for Ubuntu Precise (12.04).
-  * Fix some of the library paths.
-  * PHP Upstream release (5.3.11 and 5.4.1)
-  * NginX Upstream release (1.2.0)
+  * The script is now completely unattended.
+  * Added an OPTIONS file that contains all program versions and paths.
+  * Improved the final screen. It should now check for the external IP address.
 
 ### 5.5.0 ###
 
