--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -1,5 +1,9 @@
 ## Release Notes: ##
 
+### 6.0.1 ###
+
+  * PHP upstream release (http://www.php.net/archive/2012.php#id2012-05-03-1)
+
 ### 6.0.0 ###
 
   * The script is now completely unattended.
