--- a/README.mkd
+++ b/README.mkd
@@ -3,7 +3,8 @@ Note: At this moment the Suhosin extension is not available for PHP 5.4.
 You can install your preferred versions for any of the programs. Just edit the OPTIONS file and change them accordingly.
 
 It is highly recommended to run this installer on a fresh installed system.
-This is tested with Ubuntu 10.04, 11.10 and 12.04, both 32 bits and 64 bits, on official Amazon EC2 Ubuntu images.
+
+This is tested automatically on Ubuntu 10.04, 11.10 and 12.04, both 32 bits and 64 bits, on official Amazon EC2 Ubuntu images.
 
 ####If you find this interesting and you want to keep the development active, please click on the button below to donate:###
 <div style="text-align: center;"><a href='http://www.pledgie.com/campaigns/16676'><img alt='Click here to lend your support to: LEMP Stack and make a donation at www.pledgie.com !' src='http://www.pledgie.com/campaigns/16676.png?skin_name=chrome' border='0' /></div>
@@ -50,14 +51,14 @@ In the "ext" folder you will also find some utilities:
 * `nxensite` and `nxdissite` commands to enable or disable sites in NginX (similar to a2ensite and a2dissite in Apache).
 * `update_nginx.sh` script which you can use to upgrade the current nginx.
   * you can run it with `sudo env PATH=$PATH bash ext/update_nginx.sh 1.0.4` (as you can see there are a few things worth mentioning: you need to declare the current path to the sudo command in order to preserve it; you can only have one argument in a strict form x.x.x; )
-  * this script is doing nothing more than reconstructing you current nginx config with the new version. It gets the previous configure options programmatically so if you used 3rd party modules it will not work. Also it saves the current config files and brings them back after the compilation was successful.
+  * this script is doing nothing more than reconstructing you current nginx config with the new version. It gets the previous configure options automatically so if you used 3rd party modules it will not work. Also it saves the current config files and brings them back after the compilation was successful.
 * `update_php.sh` - upgrades the current php (`sudo env PATH=$PATH bash ext/update_php.sh 5.3.10`).
 * `update_apc.sh` - upgrades the current apc (`sudo env PATH=$PATH bash ext/update_apc.sh 3.1.19`).
 
 # CONTRIBUTING: #
 This project is still under development. Feedback and suggestions are very welcome and I encourage you to use the [Issues list](https://github.com/vladgh/VladGh.com-LEMP/issues) on Github to provide that feedback.
 
-Feel free to fork this repo and to commit your additions. When done, open a pull request to your feature branch.
+Feel free to fork this repository and to commit your additions. When done, open a pull request to your feature branch.
 
 The formatting conventions already present in these scripts are as follows:
 
