--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -1,5 +1,10 @@
 ## Release Notes: ##
 
+### 7.0.0 ###
+
+  * Added Postfix as a null client (send only).
+  * 
+
 ### 6.1.1 ###
 
   * Added re2c package as a dependency for php.
