--- a/README.mkd
+++ b/README.mkd
@@ -24,9 +24,9 @@ Start a screen session:
 
     screen
 
-I recommend running everything inside a screen session because if your connection drops you can easily come back with `screen -rad`. If you use something else (ex: byobu) you can skip this step.
+I recommend running everything inside a screen session because in case your connection drops you can easily come back with `screen -rad`. If you use something else (ex: byobu) you can skip this step.
 
-Edit the OPTIONS files and change `ENABLED='yes'`. This is were you can chose to install the MySQL Server or modify the versions for any of the programs, as well as the paths.
+Edit the OPTIONS files with your favourite editor and enable this installer: `ENABLED='yes'`. Read the rest of the file and choose what packages you want installed, what versions and where to install them.
 
 Run the installer:
 
