Minor README fix
Signed-off-by: Vlad <vgit@vladgh.com>

--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -3,7 +3,7 @@
 ### 7.0.0 ###
 
   * Added Postfix as a null client (send only).
-  * The script is now fully compatible with Debian.
+  * The script is now fully compatible with Debian 6.
   * NginX now supports IPv6.
   * Switched to Apache License, Version 2.0.
   * "update_nginx.sh", "update_php.sh", "update_apc.sh" scripts now support
