--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,5 @@
 This package represents a script to install the latest NginX, MySQL and PHP (with APC and Suhosin).
+
 Note:
   * At this moment the Suhosin extension is not available for PHP 5.4.
   * APC v3.1.10 reports as v3.1.9: (https://bugs.php.net/bug.php?id=61695)
@@ -8,8 +9,8 @@ You can install your preferred versions for any of the programs. Just edit the O
 It is highly recommended to run this installer on a fresh installed system.
 
 This is tested automatically on:
- * Ubuntu 10.04, 11.10 and 12.04, both 32 bits and 64 bits, on official Amazon EC2 Ubuntu images.
- * Debian 6 on RightScale Debian images.
+ * Ubuntu 10.04, 11.10 and 12.04, both 32 and 64 bit, on official Amazon EC2 Ubuntu images.
+ * Debian 6, both 32 and 64 bit, on RightScale Debian images.
 
 ####If you find this interesting and you want to keep the development active, please click on the button below to donate:###
 <div style="text-align: center;"><a href='http://www.pledgie.com/campaigns/16676'><img alt='Click here to lend your support to: LEMP Stack and make a donation at www.pledgie.com !' src='http://www.pledgie.com/campaigns/16676.png?skin_name=chrome' border='0' /></div>
