Minor improvements to nginx update script
 * Configure arguments are now declared in the OPTIONS file
 * Some code cleanup.

Signed-off-by: Vlad <vgit@vladgh.com>

--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -2,8 +2,10 @@
 
 ### 7.0.2 ###
 
+  * Configure options for NginX are now declared in OPTIONS.
   * Call init scripts directly.
   * Fix ext/update_apc.sh script.
+  * Fix ext/update_nginx.sh script.
 
 ### 7.0.1 ###
 
