--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -1,5 +1,9 @@
 ## Release Notes: ##
 
+### 7.0.5 ###
+
+  * PostgreSQL, regular and PDO support (Closes #34).
+
 ### 7.0.4 ###
 
   * NginX, PHP and APC upstream release.
