Use single quotes for MySQL password

--- a/README.mkd
+++ b/README.mkd
@@ -39,7 +39,7 @@ Run the installer:
 
 After the installer is finished (this will take a long time depending on your server specifications), you MUST set your mysql root password:
 
-    sudo mysqladmin -u root password MYPASSWORD
+    sudo mysqladmin -u root password 'MYPASSWORD'
 
 You can go to your server's address and you will see the PHP info page.
 Also, if you go to:
